# chronpy

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: noxfile.py  tests.yml
docs/: api.md  conf.py  index.md  readthedocs.yaml
src/: fit_psd.ipynb  mvts.ipynb
src/chronpy/: __init__.py  data.py
src/chronpy/hist/: bayesian_blocks.py
src/chronpy/modwt/: wavelet.py
src/chronpy/modwt/wmtsa/: bestbasis.py  date.py  dwpt.py  dwt.py  modwpt.py  modwt.py
src/chronpy/psd/: __init__.py  models.py
src/chronpy/util/: misc.py
tests/: conftest.py  test_bayesian_blocks.py  test_models.py
